tests/react_ref_as_prop_legacy/test.js
component RefWithoutReact(ref: any) { // error
  return;
}
declare component SpreadRef(...p: {ref: number}); // error
